# langgraph-test

./: .cursorrules  .gitignore  package-lock.json  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/favicon.ico/: route.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
frontend/.next/static/chunks/app/: layout.js  page.js
frontend/.next/static/chunks/fallback/: amp.js  webpack.js
frontend/.next/static/webpack/: e377e2742f33222b.webpack.hot-update.json  webpack.267279958349ed0d.hot-update.js  webpack.2ba24b3d23e16a54.hot-update.js  webpack.31f8d4f535ddcbb7.hot-update.js  webpack.3a2bae83e5268a3a.hot-update.js  webpack.56637cd1b148630c.hot-update.js  webpack.7077f75074e3dc1b.hot-update.js  webpack.73d3b0d4701d46d7.hot-update.js  webpack.d23bd44a954dca72.hot-update.js  webpack.e377e2742f33222b.hot-update.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatHistory.tsx  ChatInterface.tsx
frontend/src/pages/: index.tsx
(+14 files in other folders)
