[tool.poetry]
name = "langgraph-test"
version = "0.1.0"
description = ""
authors = ["Hyungjoo Song <hyungjoo.song@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.3"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
